--- a/Project0/TempMohit/Features/PlaceOrders.xaml
+++ b/Project0/TempMohit/Features/PlaceOrders.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="PlaceOrders" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="608,2350" sap2010:WorkflowViewState.IdRef="PlaceOrders_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="PlaceOrders" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="642,2350" sap2010:WorkflowViewState.IdRef="PlaceOrders_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="31">
       <x:String>System.Activities</x:String>
@@ -61,7 +61,7 @@
   <Sequence DisplayName="PlaceOrders" sap:VirtualizedContainerService.HintSize="618,2285" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="orderClientRef" />
-      <Variable x:TypeArguments="sd:DataTable" Name="orderListSubmitted" />
+      <Variable x:TypeArguments="sd:DataTable" Name="orderListIncoming" />
       <Variable x:TypeArguments="x:String" Name="logMsg" />
       <Variable x:TypeArguments="sd:DataTable" Name="productList" />
     </Sequence.Variables>
@@ -70,29 +70,25 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke GetOrderListSubmitted workflow" sap:VirtualizedContainerService.HintSize="576,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="TempMohit\DataAccess\GetOrderListSubmitted.xaml">
+    <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke GetOrderListSubmitted workflow" sap:VirtualizedContainerService.HintSize="576,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="TempMohit\DataAccess\GetOrderListIncoming.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <OutArgument x:TypeArguments="sd:DataTable" x:Key="orderList">
-          <mva:VisualBasicReference x:TypeArguments="sd:DataTable" ExpressionText="orderListSubmitted" />
-        </OutArgument>
+        <OutArgument x:TypeArguments="sd:DataTable" x:Key="orderList">[orderListIncoming]</OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
-    <ui:OutputDataTable DataTable="[orderListSubmitted]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="576,22" sap2010:WorkflowViewState.IdRef="OutputDataTable_2" Text="[logMsg]" />
+    <ui:OutputDataTable DataTable="[orderListIncoming]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="576,22" sap2010:WorkflowViewState.IdRef="OutputDataTable_2" Text="[logMsg]" />
     <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="576,61" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="[&quot;log: Got Shopping lists that have been submitted (sheet: OrderList in ShoppingList.xlsx)&quot;+Environment.NewLine+logMsg]" />
     <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke GetProductList workflow" sap:VirtualizedContainerService.HintSize="576,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="TempMohit\DataAccess\GetProductList.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <OutArgument x:TypeArguments="sd:DataTable" x:Key="productList">
-          <mva:VisualBasicReference x:TypeArguments="sd:DataTable" ExpressionText="productList" />
-        </OutArgument>
+        <OutArgument x:TypeArguments="sd:DataTable" x:Key="productList">[productList]</OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <ui:OutputDataTable DataTable="[productList]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="576,22" sap2010:WorkflowViewState.IdRef="OutputDataTable_5" Text="[logMsg]" />
     <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="576,61" sap2010:WorkflowViewState.IdRef="WriteLine_8" Text="[&quot;log: Got list of products (with vendor info) (sheet: ProductList, in VendorsAndProducts.xlsx)&quot;+Environment.NewLine+logMsg]" />
-    <ui:AddDataColumn x:TypeArguments="x:String" Column="{x:Null}" DefaultValue="{x:Null}" MaxLength="{x:Null}" AllowDBNull="True" AutoIncrement="False" ColumnName="Vendor" DataTable="[orderListSubmitted]" DisplayName="Add Data Column _ Vendor to orderListSubmitted" sap:VirtualizedContainerService.HintSize="576,22" sap2010:WorkflowViewState.IdRef="AddDataColumn`1_2" Unique="False" />
-    <ui:OutputDataTable DataTable="[orderListSubmitted]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="576,22" sap2010:WorkflowViewState.IdRef="OutputDataTable_6" Text="[logMsg]" />
+    <ui:AddDataColumn x:TypeArguments="x:String" Column="{x:Null}" DefaultValue="{x:Null}" MaxLength="{x:Null}" AllowDBNull="True" AutoIncrement="False" ColumnName="Vendor" DataTable="[orderListIncoming]" DisplayName="Add Data Column _ Vendor to orderListSubmitted" sap:VirtualizedContainerService.HintSize="576,22" sap2010:WorkflowViewState.IdRef="AddDataColumn`1_2" Unique="False" />
+    <ui:OutputDataTable DataTable="[orderListIncoming]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="576,22" sap2010:WorkflowViewState.IdRef="OutputDataTable_6" Text="[logMsg]" />
     <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="576,61" sap2010:WorkflowViewState.IdRef="WriteLine_9" Text="[&quot;log: Added Vendor column to order list&quot;+Environment.NewLine+logMsg]" />
     <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="576,61" sap2010:WorkflowViewState.IdRef="WriteLine_3" Text="log: adding approprate Vender values from VendorList sheet, into  order list" />
-    <ui:ForEachRow CurrentIndex="{x:Null}" DataTable="[orderListSubmitted]" DisplayName="For Each Row" sap:VirtualizedContainerService.HintSize="576,818" sap2010:WorkflowViewState.IdRef="ForEachRow_3">
+    <ui:ForEachRow CurrentIndex="{x:Null}" DataTable="[orderListIncoming]" DisplayName="For Each Row" sap:VirtualizedContainerService.HintSize="576,818" sap2010:WorkflowViewState.IdRef="ForEachRow_3">
       <ui:ForEachRow.Body>
         <ActivityAction x:TypeArguments="sd:DataRow">
           <ActivityAction.Argument>
@@ -132,21 +128,17 @@
             </If>
             <ui:InvokeCode ContinueOnError="{x:Null}" Code="row(3) = vendor" DisplayName="Invoke code" sap:VirtualizedContainerService.HintSize="484,164" sap2010:WorkflowViewState.IdRef="InvokeCode_2">
               <ui:InvokeCode.Arguments>
-                <InArgument x:TypeArguments="sd:DataRow" x:Key="row">
-                  <mva:VisualBasicValue x:TypeArguments="sd:DataRow" ExpressionText="row" />
-                </InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="vendor">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="vendor" />
-                </InArgument>
+                <InArgument x:TypeArguments="sd:DataRow" x:Key="row">[row]</InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="vendor">[vendor]</InArgument>
               </ui:InvokeCode.Arguments>
             </ui:InvokeCode>
           </Sequence>
         </ActivityAction>
       </ui:ForEachRow.Body>
     </ui:ForEachRow>
-    <ui:OutputDataTable DataTable="[orderListSubmitted]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="576,22" sap2010:WorkflowViewState.IdRef="OutputDataTable_8" Text="[logMsg]" />
+    <ui:OutputDataTable DataTable="[orderListIncoming]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="576,22" sap2010:WorkflowViewState.IdRef="OutputDataTable_8" Text="[logMsg]" />
     <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="576,61" sap2010:WorkflowViewState.IdRef="WriteLine_12" Text="[&quot;log: &quot;+logMsg]" />
     <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="576,61" sap2010:WorkflowViewState.IdRef="WriteLine_13" Text="log: appending processed orderListSubmitted to OrderListPlaced in VendorsAndProducts.xlsx" />
-    <ui:AppendRange DataTable="[orderListSubmitted]" DisplayName="Append Range" sap:VirtualizedContainerService.HintSize="576,115" sap2010:WorkflowViewState.IdRef="AppendRange_1" SheetName="OrderListPlaced" WorkbookPath="TempMohit\Data\VendorsAndProducts.xlsx" />
+    <ui:AppendRange DataTable="[orderListIncoming]" DisplayName="Append Range" sap:VirtualizedContainerService.HintSize="576,115" sap2010:WorkflowViewState.IdRef="AppendRange_1" SheetName="OrderListProcessed" WorkbookPath="TempMohit\Data\VendorsAndProducts.xlsx" />
   </Sequence>
 </Activity>
